--- a/Fitnessstudio-Webseite/index.html
+++ b/Fitnessstudio-Webseite/index.html
@@ -29,10 +29,10 @@
                             <a href="#">Sport Events</a>
                         </li>
                         <li >
-                            <a href="/trainers.html">Trainers</a>
+                            <a href="trainers.html">Trainers</a>
                         </li>
                         <li >
-                            <a href="/raum.html">Räume</a>
+                            <a href="raum.html">Räume</a>
                         </li>
                     </ul>
                 </div>
