--- a/Fitnessstudio-Webseite/trainers.html
+++ b/Fitnessstudio-Webseite/trainers.html
@@ -17,7 +17,7 @@
     <header id="header">
         <div class="container">
             <div class="row">
-                <a class="navbar-brand" href="/index.html">Fitnessstudio BRB</a>
+                <a class="navbar-brand" href="index.html">Fitnessstudio BRB</a>
                 <div class="col-sm-12 mainmenu_wrap">
                     <div class="main-menu-icon visible-xs">
                         <span></span>
@@ -26,13 +26,13 @@
                     </div>
                     <ul id="mainmenu" class="menu sf-menu responsive-menu superfish sf-js-enabled">
                         <li >
-                            <a href="/index.html">Sport Events</a>
+                            <a href="index.html">Sport Events</a>
                         </li>
                         <li class="active">
                             <a href="#">Trainers</a>
                         </li>
                         <li >
-                            <a href="/raum.html">Räume</a>
+                            <a href="raum.html">Räume</a>
                         </li>
                     </ul>
                 </div>
