--- a/Fitnessstudio-Webseite/index.html
+++ b/Fitnessstudio-Webseite/index.html
@@ -17,7 +17,7 @@
     <header id="header">
         <div class="container">
             <div class="row">
-                <a class="navbar-brand" href="/index.html">Fitnessstudio BRB</a>
+                <a class="navbar-brand" href="index.html">Fitnessstudio BRB</a>
                 <div class="col-sm-12 mainmenu_wrap">
                     <div class="main-menu-icon visible-xs">
                         <span></span>
