--- a/Fitnessstudio-Webseite/ns/kursplanung-fitnessstudio/AikidoBeginner.html
+++ b/Fitnessstudio-Webseite/ns/kursplanung-fitnessstudio/AikidoBeginner.html
@@ -4,11 +4,11 @@
     <title>Sport Event</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="/styles/bootstrap-4.3.1/css/bootstrap.min.css">
-    <link href="/plugins/fontawesome-5.9.0/css/all.css" rel="stylesheet" type="text/css">
-    <link href="/styles/animations.css" rel="stylesheet" type="text/css">
-    <link href="/styles/main.css" rel="stylesheet" type="text/css">
-    <link href="/styles/sportevent.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" type="text/css" href="Fitnessstudio-Webseite/styles/bootstrap-4.3.1/css/bootstrap.min.css">
+    <link href="Fitnessstudio-Webseite/plugins/fontawesome-5.9.0/css/all.css" rel="stylesheet" type="text/css">
+    <link href="Fitnessstudio-Webseite/styles/animations.css" rel="stylesheet" type="text/css">
+    <link href="Fitnessstudio-Webseite/styles/main.css" rel="stylesheet" type="text/css">
+    <link href="Fitnessstudio-Webseite/styles/sportevent.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 
@@ -115,8 +115,8 @@
     </section>
 </footer>
 
-<script src="/js/jquery-3.3.1.slim.min.js"></script>
-<script src="/styles/bootstrap-4.3.1/js/bootstrap.bundle.js"></script>
-<script src="/styles/bootstrap-4.3.1/js/bootstrap.min.js"></script>
+<script src="Fitnessstudio-Webseite/js/jquery-3.3.1.slim.min.js"></script>
+<script src="Fitnessstudio-Webseite/styles/bootstrap-4.3.1/js/bootstrap.bundle.js"></script>
+<script src="Fitnessstudio-Webseite/styles/bootstrap-4.3.1/js/bootstrap.min.js"></script>
 </body>
 </html>
