--- a/Fitnessstudio-Webseite/trainers.html
+++ b/Fitnessstudio-Webseite/trainers.html
@@ -4,11 +4,11 @@
 <title>Trainers</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="styles/bootstrap-4.3.1/css/bootstrap.min.css">
-<link href="plugins/fontawesome-5.9.0/css/all.css" rel="stylesheet" type="text/css">
-<link href="styles/animations.css" rel="stylesheet" type="text/css">
-<link href="styles/main.css" rel="stylesheet" type="text/css">
-<link href="styles/trainer.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" type="text/css" href="ns/kursplanung-fitnessstudio/styles/bootstrap-4.3.1/css/bootstrap.min.css">
+<link href="ns/kursplanung-fitnessstudio/plugins/fontawesome-5.9.0/css/all.css" rel="stylesheet" type="text/css">
+<link href="ns/kursplanung-fitnessstudio/styles/animations.css" rel="stylesheet" type="text/css">
+<link href="ns/kursplanung-fitnessstudio/styles/main.css" rel="stylesheet" type="text/css">
+<link href="ns/kursplanung-fitnessstudio/styles/trainer.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 
@@ -64,7 +64,7 @@
             <div class="col-md-6 search">
                 <div class="row no-gutters overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative trainer-card">
                     <div class="col-auto d-none d-lg-block">
-                        <img width="250" height="260" src="images/Personal/MaxMustermann.jpg" alt="">
+                        <img width="250" height="260" src="ns/kursplanung-fitnessstudio/images/Personal/MaxMustermann.jpg" alt="">
                     </div>
                     <div class="col p-4 d-flex flex-column position-static">
                         <h3 class="mb-0"><a href="ns/kursplanung-fitnessstudio/MaxMustermann.html">Max Mustermann</a></h3>
@@ -94,7 +94,7 @@
             <div class="col-md-6 search">
                 <div class="row no-gutters overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative trainer-card">
                     <div class="col-auto d-none d-lg-block">
-                        <img width="250" height="260" src="images/Personal/JuriShyshlin.jpg" alt="">
+                        <img width="250" height="260" src="ns/kursplanung-fitnessstudio/images/Personal/JuriShyshlin.jpg" alt="">
                     </div>
                     <div class="col p-4 d-flex flex-column position-static">
                         <h3 class="mb-0"><a href="ns/kursplanung-fitnessstudio/JuriShyshlin.html">Juri Shyshlin</a></h3>
@@ -122,7 +122,7 @@
             <div class="col-md-6 search">
                 <div class="row no-gutters overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative trainer-card">
                     <div class="col-auto d-none d-lg-block">
-                        <img width="250" height="260" src="images/Personal/JenniferFerle.jpg" alt="">
+                        <img width="250" height="260" src="ns/kursplanung-fitnessstudio/images/Personal/JenniferFerle.jpg" alt="">
                     </div>
                     <div class="col p-4 d-flex flex-column position-static">
                         <h3 class="mb-0"><a href="ns/kursplanung-fitnessstudio/JenniferFerle.html">Jennifer Ferle</a></h3>
@@ -152,7 +152,7 @@
             <div class="col-md-6 search">
                 <div class="row no-gutters overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative trainer-card">
                     <div class="col-auto d-none d-lg-block">
-                        <img width="250" height="260" src="images/Personal/DirkKeller.jpg" alt="">
+                        <img width="250" height="260" src="ns/kursplanung-fitnessstudio/images/Personal/DirkKeller.jpg" alt="">
                     </div>
                     <div class="col p-4 d-flex flex-column position-static">
                         <h3 class="mb-0"><a href="ns/kursplanung-fitnessstudio/DirkKeller.html">Dirk Keller</a></h3>
@@ -182,7 +182,7 @@
             <div class="col-md-6 search">
                 <div class="row no-gutters overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative trainer-card">
                     <div class="col-auto d-none d-lg-block">
-                        <img width="250" height="260" src="images/Personal/CristianCananau.jpg" alt="">
+                        <img width="250" height="260" src="ns/kursplanung-fitnessstudio/images/Personal/CristianCananau.jpg" alt="">
                     </div>
                     <div class="col p-4 d-flex flex-column position-static">
                         <h3 class="mb-0"><a href="ns/kursplanung-fitnessstudio/CristianCananau.html">Cristian Cananau</a></h3>
@@ -212,7 +212,7 @@
             <div class="col-md-6 search">
                 <div class="row no-gutters overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative trainer-card">
                     <div class="col-auto d-none d-lg-block">
-                        <img width="250" height="260" src="images/Personal/MarkBlume.jpg" alt="">
+                        <img width="250" height="260" src="ns/kursplanung-fitnessstudio/images/Personal/MarkBlume.jpg" alt="">
                     </div>
                     <div class="col p-4 d-flex flex-column position-static">
                         <h3 class="mb-0"><a href="ns/kursplanung-fitnessstudio/MarkBlume.html">Mark Blume</a></h3>
@@ -242,7 +242,7 @@
             <div class="col-md-6 search">
                 <div class="row no-gutters overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative trainer-card">
                     <div class="col-auto d-none d-lg-block">
-                        <img width="250" height="260" src="images/Personal/DennisSchulz.jpg" alt="">
+                        <img width="250" height="260" src="ns/kursplanung-fitnessstudio/images/Personal/DennisSchulz.jpg" alt="">
                     </div>
                     <div class="col p-4 d-flex flex-column position-static">
                         <h3 class="mb-0"><a href="ns/kursplanung-fitnessstudio/DennisSchulz.html">Dennis Schulz</a></h3>
@@ -283,9 +283,9 @@
     </section>
 </footer>
 
-<script src="js/jquery-3.3.1.slim.min.js"></script>
-<script src="styles/bootstrap-4.3.1/js/bootstrap.bundle.js"></script>
-<script src="styles/bootstrap-4.3.1/js/bootstrap.min.js"></script>
-<script src="js/search.js"></script>
+<script src="ns/kursplanung-fitnessstudio/js/jquery-3.3.1.slim.min.js"></script>
+<script src="ns/kursplanung-fitnessstudio/styles/bootstrap-4.3.1/js/bootstrap.bundle.js"></script>
+<script src="ns/kursplanung-fitnessstudio/styles/bootstrap-4.3.1/js/bootstrap.min.js"></script>
+<script src="ns/kursplanung-fitnessstudio/js/search.js"></script>
 </body>
 </html>
