--- a/Fitnessstudio-Webseite/raum.html
+++ b/Fitnessstudio-Webseite/raum.html
@@ -16,7 +16,7 @@
     <header id="header">
         <div class="container">
             <div class="row">
-                <a class="navbar-brand" href="/index.html">Fitnessstudio BRB</a>
+                <a class="navbar-brand" href="index.html">Fitnessstudio BRB</a>
                 <div class="col-sm-12 mainmenu_wrap">
                     <div class="main-menu-icon visible-xs">
                         <span></span>
@@ -25,10 +25,10 @@
                     </div>
                     <ul id="mainmenu" class="menu sf-menu responsive-menu superfish sf-js-enabled">
                         <li >
-                            <a href="/index.html">Sport Events</a>
+                            <a href="index.html">Sport Events</a>
                         </li>
                         <li class="">
-                            <a href="/trainers.html">Trainers</a>
+                            <a href="trainers.html">Trainers</a>
                         </li>
                         <li class="active">
                             <a href="#">Räume</a>
